RF! IDisposable + small refactoring

--- a/States/States.csproj
+++ b/States/States.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="NPG.States\IPayloadedState.cs" />
-    <Compile Include="NPG.States\IExitState.cs" />
+    <Compile Include="NPG.States\IExitable.cs" />
     <Compile Include="NPG.States\IStateFactory.cs" />
     <Compile Include="NPG.States\IState.cs" />
     <Compile Include="NPG.States\IUpdatable.cs" />
