--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -46,10 +46,11 @@
     <Compile Include="ExampleState.cs" />
     <Compile Include="ExampleStateFactory.cs" />
     <Compile Include="GameStateMachine.cs" />
+    <Compile Include="IAnotherState.cs" />
     <Compile Include="IGameState.cs" />
     <Compile Include="Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WrongPayloadedState.cs" />
+    <Compile Include="AnotherPayloadedState.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\States\States.csproj">
